Add Spring web dependencies to pom.

--- a/code/interview.challenge.people/pom.xml
+++ b/code/interview.challenge.people/pom.xml
@@ -28,11 +28,6 @@
 	</build>
 	
 	<dependencies>
-	
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -45,13 +40,25 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		
-		<!-- H2: in memory db for testing -->
 		<dependency>
+			<!-- H2: in memory db for testing -->
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<!-- Start db -->
+		<!-- End db -->
+		
+		<!-- Start web -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-rest</artifactId>
+        </dependency>
+        <!-- End web -->
 
 	</dependencies>
 	
