--- a/code/interview.challenge.people/pom.xml
+++ b/code/interview.challenge.people/pom.xml
@@ -59,6 +59,32 @@
             <artifactId>spring-boot-starter-data-rest</artifactId>
         </dependency>
         <!-- End web -->
+        
+        <!-- Start swagger -->
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger2</artifactId>
+		    <version>2.7.0</version>
+		</dependency>
+
+		<dependency>
+			 <groupId>io.springfox</groupId>
+		     <artifactId>springfox-swagger-ui</artifactId>
+		     <version>2.7.0</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-staticdocs</artifactId>
+		    <version>2.6.1</version>
+		</dependency>
+		
+		<dependency>
+			<!-- json -->
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		</dependency>
+		<!-- End swagger -->
 
 	</dependencies>
 	
